--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@railway/cli": "^3.11.4",
     "bcrypt": "^5.1.1",
     "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
@@ -30,6 +29,7 @@
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
